@@ -1,3 +1,5 @@
+.\"	$NetBSD: recno.3,v 1.4 1995/02/27 13:23:40 cgd Exp $
+.\"
 .\" Copyright (c) 1990, 1993
 .\"	The Regents of the University of California.  All rights reserved.
 .\"
