@@ -1,3 +1,4 @@
+#	$NetBSD: WHATSNEW,v 1.6 1995/02/27 13:28:25 cgd Exp $
 # @(#)WHATSNEW	8.3 (Berkeley) 3/18/94
 
 New in alpha3.4:  The complex bug alluded to below has been fixed (in a
